cluster/study/radicale/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: radicale
    app.kubernetes.io/version: 3.8.1
  name: radicale
spec:
  selector:
    app.kubernetes.io/name: radicale
  ports:
  - name: http-radicale
    port: 5232
    targetPort: 5232
