cluster/study/radicale/egress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radicale-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radicale
  policyTypes:
  - Egress
  egress: []
